test(map): verify same-route prediction and inference gating