@@ -16,6 +16,7 @@ import org.springframework.test.context.ActiveProfiles;
 
 import java.math.BigDecimal;
 import java.time.Clock;
+import java.time.Duration;
 import java.time.Instant;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
@@ -27,13 +28,9 @@ import static org.assertj.core.api.Assertions.assertThat;
 @ActiveProfiles("test")
 class MapPredictionServiceTest {
 
-    // 정시 30분 전(예: XX:50)에 고정해, 가까운 도보 후보라도 arrivalAt+30분이 다음 정시로 넘어가
-    // TOO_SOON이 아닌 NORMAL로 판정되도록 한다. 벽시계 시간에 의존한 flaky 테스트를 방지한다.
     private static final Clock NOT_TOO_SOON_CLOCK =
         Clock.fixed(Instant.parse("2026-08-15T09:50:00Z"), ZoneOffset.ofHours(9));
 
-    // 정시 직후(예: XX:05)에 고정해, 가까운 도보 후보의 arrivalAt+30분이 같은 시간대 안에 머물러
-    // TOO_SOON으로 판정되도록 한다.
     private static final Clock TOO_SOON_CLOCK =
         Clock.fixed(Instant.parse("2026-08-15T09:05:00Z"), ZoneOffset.ofHours(9));
 
@@ -64,13 +61,18 @@ class MapPredictionServiceTest {
 
     @BeforeEach
     void setUp() {
-        RouteCandidateService candidateService = new RouteCandidateService(stationRepository);
+        RouteCandidateService candidateService = routeCandidatesWithDuration(600);
         inferenceClient = org.mockito.Mockito.mock(InferenceClient.class);
         org.mockito.Mockito.when(inferenceClient.predict(org.mockito.ArgumentMatchers.anyList()))
             .thenAnswer(invocation -> normalInferenceResponse(candidateId(invocation)));
-        mapPredictionService = new MapPredictionService(candidateService, inventoryRepository, inferenceClient, NOT_TOO_SOON_CLOCK);
+        mapPredictionService = new MapPredictionService(
+            candidateService, inventoryRepository, inferenceClient, NOT_TOO_SOON_CLOCK
+        );
 
-        Station s1 = new Station("ST-4", "00102", "102. 망원역 1번출구 앞", new BigDecimal("37.5556488"), new BigDecimal("126.91062927"), true);
+        Station s1 = new Station(
+            "ST-4", "00102", "102. 망원역 1번출구 앞",
+            new BigDecimal("37.5556488"), new BigDecimal("126.91062927"), true
+        );
         stationRepository.save(s1);
 
         inventoryRepository.save(new StationInventoryCurrent(
@@ -79,8 +81,8 @@ class MapPredictionServiceTest {
     }
 
     @Test
-    @DisplayName("후보지, 현재 재고, 예측 조립 시 정수 미터와 정수 초로 단위가 계산된다")
-    void buildRouteCandidates() {
+    @DisplayName("정상 route evidence를 응답에 보존하고 동일 duration으로 arrivalAt과 확률 horizon을 계산한다")
+    void buildRouteCandidatesUsesSameRouteEvidence() {
         List<PredictionApiDtos.CandidatePredictionResponseDto> results = mapPredictionService.buildRouteCandidates(
             new BigDecimal("37.5500"), new BigDecimal("126.9000"),
             new BigDecimal("37.5556488"), new BigDecimal("126.91062927"),
@@ -88,12 +90,19 @@ class MapPredictionServiceTest {
         );
 
         assertThat(results).hasSize(1);
-        PredictionApiDtos.CandidatePredictionResponseDto dto = results.get(0);
+        PredictionApiDtos.CandidatePredictionResponseDto dto = results.getFirst();
         assertThat(dto.stationId()).isEqualTo("ST-4");
         assertThat(dto.availableBikeCount()).isEqualTo(11);
         assertThat(dto.inventoryStatus()).isEqualTo(InventoryStatus.NORMAL);
-        assertThat(dto.distanceMeters()).isGreaterThanOrEqualTo(0);
-        assertThat(dto.durationSeconds()).isGreaterThanOrEqualTo(0);
+        assertThat(dto.routeStatus()).isEqualTo(PredictionApiDtos.RouteStatus.NORMAL);
+        assertThat(dto.routeDetail()).isNotNull();
+        assertThat(dto.routeDetail().distanceMeters()).isEqualTo(800);
+        assertThat(dto.routeDetail().durationSeconds()).isEqualTo(600);
+        assertThat(dto.routeDetail().travelMode()).isEqualTo("WALK");
+        assertThat(dto.distanceMeters()).isEqualTo(dto.routeDetail().distanceMeters());
+        assertThat(dto.durationSeconds()).isEqualTo(dto.routeDetail().durationSeconds());
+        assertThat(Duration.between(OffsetDateTime.now(NOT_TOO_SOON_CLOCK), dto.arrivalAt()).getSeconds())
+            .isEqualTo(dto.routeDetail().durationSeconds());
         assertThat(dto.predictionStatus()).isEqualTo(PredictionApiDtos.PredictionStatus.NORMAL);
         assertThat(dto.predictionProbability()).isEqualByComparingTo("0.75");
         assertThat(dto.availabilityLevel()).isEqualTo(PredictionApiDtos.AvailabilityLevel.HIGH);
@@ -108,10 +117,12 @@ class MapPredictionServiceTest {
     }
 
     @Test
-    @DisplayName("한 후보의 예측 조회가 실패(예외)하더라도 다른 후보의 정상 응답이 누락되지 않고 격리된다")
+    @DisplayName("한 후보의 예측 조회가 실패해도 다른 후보의 정상 응답을 유지한다")
     void partialCandidateFailureDoesNotMaskOtherCandidates() {
-        // ST-5 추가 (예측 조회 실패 모의 대상)
-        Station s2 = new Station("ST-5", "00103", "103. 망원한강공원 앞", new BigDecimal("37.5556000"), new BigDecimal("126.9106000"), true);
+        Station s2 = new Station(
+            "ST-5", "00103", "103. 망원한강공원 앞",
+            new BigDecimal("37.5556000"), new BigDecimal("126.9106000"), true
+        );
         stationRepository.save(s2);
         inventoryRepository.save(new StationInventoryCurrent(
             "ST-5", 3, OffsetDateTime.now(NOT_TOO_SOON_CLOCK), InventoryStatus.NORMAL
@@ -121,12 +132,15 @@ class MapPredictionServiceTest {
         org.mockito.Mockito.when(failingPredictionService.predict(org.mockito.ArgumentMatchers.anyList()))
             .thenAnswer(invocation -> {
                 String stationId = candidateId(invocation);
-                if ("ST-5".equals(stationId)) throw new RuntimeException("ST-5 ML Prediction Service Error");
+                if ("ST-5".equals(stationId)) {
+                    throw new RuntimeException("ST-5 ML Prediction Service Error");
+                }
                 return normalInferenceResponse(stationId);
             });
 
-        RouteCandidateService candService = new RouteCandidateService(stationRepository);
-        MapPredictionService serviceWithPartialFailure = new MapPredictionService(candService, inventoryRepository, failingPredictionService, NOT_TOO_SOON_CLOCK);
+        MapPredictionService serviceWithPartialFailure = new MapPredictionService(
+            routeCandidatesWithDuration(600), inventoryRepository, failingPredictionService, NOT_TOO_SOON_CLOCK
+        );
 
         List<PredictionApiDtos.CandidatePredictionResponseDto> results = serviceWithPartialFailure.buildRouteCandidates(
             new BigDecimal("37.5500"), new BigDecimal("126.9000"),
@@ -134,29 +148,36 @@ class MapPredictionServiceTest {
             "WALK", 60, 1
         );
 
-        // ST-4, ST-5 둘 다 반환되며, ST-5의 ML 예외로 인해 ST-4가 사라지거나 전체가 예외를 내지 않음
         assertThat(results).hasSize(2);
+        PredictionApiDtos.CandidatePredictionResponseDto st4 = results.stream()
+            .filter(r -> "ST-4".equals(r.stationId())).findFirst().orElseThrow();
+        PredictionApiDtos.CandidatePredictionResponseDto st5 = results.stream()
+            .filter(r -> "ST-5".equals(r.stationId())).findFirst().orElseThrow();
 
-        PredictionApiDtos.CandidatePredictionResponseDto st4 = results.stream().filter(r -> "ST-4".equals(r.stationId())).findFirst().orElseThrow();
-        PredictionApiDtos.CandidatePredictionResponseDto st5 = results.stream().filter(r -> "ST-5".equals(r.stationId())).findFirst().orElseThrow();
-
-        assertThat(st4.inventoryStatus()).isEqualTo(InventoryStatus.NORMAL);
-        assertThat(st5.predictionProbability()).isNull(); // ST-5는 예측 실패로 probability null
+        assertThat(st4.routeStatus()).isEqualTo(PredictionApiDtos.RouteStatus.NORMAL);
+        assertThat(st4.predictionStatus()).isEqualTo(PredictionApiDtos.PredictionStatus.NORMAL);
+        assertThat(st5.routeStatus()).isEqualTo(PredictionApiDtos.RouteStatus.NORMAL);
+        assertThat(st5.predictionProbability()).isNull();
         assertThat(st5.predictionStatus()).isEqualTo(PredictionApiDtos.PredictionStatus.UNAVAILABLE);
     }
 
     @Test
-    @DisplayName("inventoryFailureForOneCandidateKeepsOtherCandidate: 후보 A(ST-5)의 재고 조회가 예외를 일으켜도 후보 B(ST-4)의 응답이 유지된다")
+    @DisplayName("한 후보의 재고 조회 실패가 다른 후보 응답을 가리지 않는다")
     void inventoryFailureForOneCandidateKeepsOtherCandidate() {
-        Station s2 = new Station("ST-5", "00103", "103. 망원한강공원 앞", new BigDecimal("37.5556000"), new BigDecimal("126.9106000"), true);
+        Station s2 = new Station(
+            "ST-5", "00103", "103. 망원한강공원 앞",
+            new BigDecimal("37.5556000"), new BigDecimal("126.9106000"), true
+        );
         stationRepository.save(s2);
 
         StationInventoryCurrentRepository failingInvRepo = org.mockito.Mockito.mock(StationInventoryCurrentRepository.class);
         org.mockito.Mockito.when(failingInvRepo.findById("ST-4")).thenReturn(inventoryRepository.findById("ST-4"));
-        org.mockito.Mockito.when(failingInvRepo.findById("ST-5")).thenThrow(new RuntimeException("ST-5 DB Inventory Failure"));
+        org.mockito.Mockito.when(failingInvRepo.findById("ST-5"))
+            .thenThrow(new RuntimeException("ST-5 DB Inventory Failure"));
 
-        RouteCandidateService candService = new RouteCandidateService(stationRepository);
-        MapPredictionService service = new MapPredictionService(candService, failingInvRepo, inferenceClient, NOT_TOO_SOON_CLOCK);
+        MapPredictionService service = new MapPredictionService(
+            routeCandidatesWithDuration(600), failingInvRepo, inferenceClient, NOT_TOO_SOON_CLOCK
+        );
 
         List<PredictionApiDtos.CandidatePredictionResponseDto> results = service.buildRouteCandidates(
             new BigDecimal("37.5500"), new BigDecimal("126.9000"),
@@ -169,10 +190,16 @@ class MapPredictionServiceTest {
     }
 
     @Test
-    @DisplayName("routeProviderFailureForOneCandidateKeepsOtherCandidate: 후보 A(ST-5)의 경로 provider가 예외를 일으켜도 후보 B(ST-4)가 유지된다")
-    void routeProviderFailureForOneCandidateKeepsOtherCandidate() {
-        Station s2 = new Station("ST-5", "00103", "103. 망원한강공원 앞", new BigDecimal("37.5556000"), new BigDecimal("126.9106000"), true);
+    @DisplayName("route provider 실패 candidate는 route/prediction UNAVAILABLE이며 inference를 호출하지 않는다")
+    void routeProviderFailureDoesNotCreateSyntheticProbability() {
+        Station s2 = new Station(
+            "ST-5", "00103", "103. 망원한강공원 앞",
+            new BigDecimal("37.5556000"), new BigDecimal("126.9106000"), true
+        );
         stationRepository.save(s2);
+        inventoryRepository.save(new StationInventoryCurrent(
+            "ST-5", 3, OffsetDateTime.now(NOT_TOO_SOON_CLOCK), InventoryStatus.NORMAL
+        ));
 
         KakaoMapClient failingKakaoClient = new KakaoMapClient("https://dapi.kakao.com", "key", req -> {
             if (req.uri().toString().contains("126.9106000")) {
@@ -181,12 +208,16 @@ class MapPredictionServiceTest {
             @SuppressWarnings("unchecked")
             java.net.http.HttpResponse<String> okRes = org.mockito.Mockito.mock(java.net.http.HttpResponse.class);
             org.mockito.Mockito.when(okRes.statusCode()).thenReturn(200);
-            org.mockito.Mockito.when(okRes.body()).thenReturn("{ \"routes\": [{ \"summary\": { \"distance\": 600, \"duration\": 450 } }] }");
+            org.mockito.Mockito.when(okRes.body()).thenReturn(
+                "{\"route\":{\"properties\":{\"totalDistance\":600,\"totalTime\":450}}}"
+            );
             return okRes;
         });
 
         RouteCandidateService candService = new RouteCandidateService(stationRepository, failingKakaoClient);
-        MapPredictionService service = new MapPredictionService(candService, inventoryRepository, inferenceClient, NOT_TOO_SOON_CLOCK);
+        MapPredictionService service = new MapPredictionService(
+            candService, inventoryRepository, inferenceClient, NOT_TOO_SOON_CLOCK
+        );
 
         List<PredictionApiDtos.CandidatePredictionResponseDto> results = service.buildRouteCandidates(
             new BigDecimal("37.5500"), new BigDecimal("126.9000"),
@@ -195,14 +226,35 @@ class MapPredictionServiceTest {
         );
 
         assertThat(results).hasSize(2);
-        assertThat(results.stream().anyMatch(r -> "ST-4".equals(r.stationId()))).isTrue();
+        PredictionApiDtos.CandidatePredictionResponseDto st4 = results.stream()
+            .filter(r -> "ST-4".equals(r.stationId())).findFirst().orElseThrow();
+        PredictionApiDtos.CandidatePredictionResponseDto st5 = results.stream()
+            .filter(r -> "ST-5".equals(r.stationId())).findFirst().orElseThrow();
+
+        assertThat(st4.routeStatus()).isEqualTo(PredictionApiDtos.RouteStatus.NORMAL);
+        assertThat(st4.routeDetail()).isNotNull();
+        assertThat(st4.predictionStatus()).isEqualTo(PredictionApiDtos.PredictionStatus.NORMAL);
+
+        assertThat(st5.routeStatus()).isEqualTo(PredictionApiDtos.RouteStatus.UNAVAILABLE);
+        assertThat(st5.routeDetail()).isNull();
+        assertThat(st5.distanceMeters()).isNull();
+        assertThat(st5.durationSeconds()).isNull();
+        assertThat(st5.arrivalAt()).isNull();
+        assertThat(st5.predictionTargetAt()).isNull();
+        assertThat(st5.predictionProbability()).isNull();
+        assertThat(st5.probabilities()).isNull();
+        assertThat(st5.horizonOutlook()).isNull();
+        assertThat(st5.predictionStatus()).isEqualTo(PredictionApiDtos.PredictionStatus.UNAVAILABLE);
+        org.mockito.Mockito.verify(inferenceClient, org.mockito.Mockito.times(1))
+            .predict(org.mockito.ArgumentMatchers.anyList());
     }
 
     @Test
-    @DisplayName("정시 직후 요청한 가까운 도보 후보는 TOO_SOON으로 판정되고 정상 확률 응답을 만들지 않는다")
+    @DisplayName("정시 직후 요청한 가까운 도보 후보는 TOO_SOON이고 정상 확률을 만들지 않는다")
     void nearbyWalkCandidateRightAfterHourIsTooSoon() {
-        RouteCandidateService candService = new RouteCandidateService(stationRepository);
-        MapPredictionService service = new MapPredictionService(candService, inventoryRepository, inferenceClient, TOO_SOON_CLOCK);
+        MapPredictionService service = new MapPredictionService(
+            routeCandidatesWithDuration(600), inventoryRepository, inferenceClient, TOO_SOON_CLOCK
+        );
 
         List<PredictionApiDtos.CandidatePredictionResponseDto> results = service.buildRouteCandidates(
             new BigDecimal("37.5500"), new BigDecimal("126.9000"),
@@ -211,7 +263,8 @@ class MapPredictionServiceTest {
         );
 
         assertThat(results).hasSize(1);
-        PredictionApiDtos.CandidatePredictionResponseDto dto = results.get(0);
+        PredictionApiDtos.CandidatePredictionResponseDto dto = results.getFirst();
+        assertThat(dto.routeStatus()).isEqualTo(PredictionApiDtos.RouteStatus.NORMAL);
         assertThat(dto.predictionStatus()).isEqualTo(PredictionApiDtos.PredictionStatus.TOO_SOON);
         assertThat(dto.predictionProbability()).isNull();
         assertThat(dto.probabilities()).isNull();
@@ -226,9 +279,11 @@ class MapPredictionServiceTest {
         );
 
         assertThat(results).isNotEmpty();
-        PredictionApiDtos.CandidatePredictionResponseDto dto = results.get(0);
+        PredictionApiDtos.CandidatePredictionResponseDto dto = results.getFirst();
         OffsetDateTime expectedArrivalAt = OffsetDateTime.now(NOT_TOO_SOON_CLOCK).plusMinutes(45);
         assertThat(dto.arrivalAt()).isEqualTo(expectedArrivalAt);
+        assertThat(dto.routeStatus()).isNull();
+        assertThat(dto.routeDetail()).isNull();
     }
 
     @Test
@@ -244,7 +299,7 @@ class MapPredictionServiceTest {
             "WALK", 60, 1
         );
 
-        PredictionApiDtos.CandidatePredictionResponseDto dto = results.get(0);
+        PredictionApiDtos.CandidatePredictionResponseDto dto = results.getFirst();
         assertThat(dto.inventoryStatus()).isEqualTo(InventoryStatus.DELAYED);
         assertThat(dto.predictionStatus()).isEqualTo(PredictionApiDtos.PredictionStatus.MISSING);
         assertThat(dto.predictionProbability()).isNull();
@@ -255,19 +310,26 @@ class MapPredictionServiceTest {
     @DisplayName("Journey departureAt으로 선택한 H1~H4만큼의 Core 확률과 시간 정보를 함께 계산한다")
     void journeyDepartureAtSelectsMatchingCoreHorizon() {
         RouteCandidateService candidateService = routeCandidatesWithDuration(600);
-        MapPredictionService service = new MapPredictionService(candidateService, inventoryRepository, inferenceClient, TOO_SOON_CLOCK);
+        MapPredictionService service = new MapPredictionService(
+            candidateService, inventoryRepository, inferenceClient, TOO_SOON_CLOCK
+        );
         org.mockito.Mockito.doAnswer(invocation -> horizonSpecificInferenceResponse(candidateId(invocation)))
-                .when(inferenceClient).predict(org.mockito.ArgumentMatchers.anyList());
-        OffsetDateTime featureAsOf = OffsetDateTime.now(TOO_SOON_CLOCK).truncatedTo(java.time.temporal.ChronoUnit.HOURS);
+            .when(inferenceClient).predict(org.mockito.ArgumentMatchers.anyList());
+        OffsetDateTime featureAsOf = OffsetDateTime.now(TOO_SOON_CLOCK)
+            .truncatedTo(java.time.temporal.ChronoUnit.HOURS);
 
         for (int horizon : List.of(60, 120, 180, 240)) {
-            OffsetDateTime departureAt = OffsetDateTime.now(TOO_SOON_CLOCK).plusMinutes(15L + (horizon - 60));
+            OffsetDateTime departureAt = OffsetDateTime.now(TOO_SOON_CLOCK)
+                .plusMinutes(15L + (horizon - 60));
             PredictionApiDtos.CandidatePredictionResponseDto dto = service.buildJourneyRouteCandidates(
-                    new BigDecimal("37.5500"), new BigDecimal("126.9000"),
-                    new BigDecimal("37.5556488"), new BigDecimal("126.91062927"), departureAt, 1).getFirst();
+                new BigDecimal("37.5500"), new BigDecimal("126.9000"),
+                new BigDecimal("37.5556488"), new BigDecimal("126.91062927"), departureAt, 1
+            ).getFirst();
 
+            assertThat(dto.routeStatus()).isEqualTo(PredictionApiDtos.RouteStatus.NORMAL);
+            assertThat(dto.routeDetail().durationSeconds()).isEqualTo(600);
             assertThat(dto.predictionStatus()).isEqualTo(PredictionApiDtos.PredictionStatus.NORMAL);
-            assertThat(dto.arrivalAt()).isEqualTo(departureAt.plusSeconds(600));
+            assertThat(dto.arrivalAt()).isEqualTo(departureAt.plusSeconds(dto.routeDetail().durationSeconds()));
             assertThat(dto.featureAsOf()).isEqualTo(featureAsOf);
             assertThat(dto.horizonMinutes()).isEqualTo(horizon);
             assertThat(dto.predictionTargetAt()).isEqualTo(featureAsOf.plusMinutes(horizon));
@@ -279,13 +341,17 @@ class MapPredictionServiceTest {
     @DisplayName("Journey departureAt이 H1~H4 밖이면 Core가 확률을 만들지 않는다")
     void journeyDepartureAtOutsideCoreHorizonsIsUnavailableWithoutProbability() {
         InferenceClient unusedInference = org.mockito.Mockito.mock(InferenceClient.class);
-        MapPredictionService service = new MapPredictionService(routeCandidatesWithDuration(600), inventoryRepository, unusedInference, TOO_SOON_CLOCK);
+        MapPredictionService service = new MapPredictionService(
+            routeCandidatesWithDuration(600), inventoryRepository, unusedInference, TOO_SOON_CLOCK
+        );
         OffsetDateTime departureAt = OffsetDateTime.now(TOO_SOON_CLOCK).plusHours(4).plusMinutes(15);
 
         PredictionApiDtos.CandidatePredictionResponseDto dto = service.buildJourneyRouteCandidates(
-                new BigDecimal("37.5500"), new BigDecimal("126.9000"),
-                new BigDecimal("37.5556488"), new BigDecimal("126.91062927"), departureAt, 1).getFirst();
+            new BigDecimal("37.5500"), new BigDecimal("126.9000"),
+            new BigDecimal("37.5556488"), new BigDecimal("126.91062927"), departureAt, 1
+        ).getFirst();
 
+        assertThat(dto.routeStatus()).isEqualTo(PredictionApiDtos.RouteStatus.NORMAL);
         assertThat(dto.predictionStatus()).isEqualTo(PredictionApiDtos.PredictionStatus.UNAVAILABLE);
         assertThat(dto.predictionProbability()).isNull();
         assertThat(dto.featureAsOf()).isNull();
@@ -297,7 +363,9 @@ class MapPredictionServiceTest {
             @SuppressWarnings("unchecked")
             java.net.http.HttpResponse<String> response = org.mockito.Mockito.mock(java.net.http.HttpResponse.class);
             org.mockito.Mockito.when(response.statusCode()).thenReturn(200);
-            org.mockito.Mockito.when(response.body()).thenReturn("{\"route\":{\"properties\":{\"totalDistance\":800,\"totalTime\":" + durationSeconds + "}}}");
+            org.mockito.Mockito.when(response.body()).thenReturn(
+                "{\"route\":{\"properties\":{\"totalDistance\":800,\"totalTime\":" + durationSeconds + "}}}"
+            );
             return response;
         });
         return new RouteCandidateService(stationRepository, client);
@@ -306,7 +374,7 @@ class MapPredictionServiceTest {
     @SuppressWarnings("unchecked")
     private static String candidateId(org.mockito.invocation.InvocationOnMock invocation) {
         List<InferenceDtos.CandidateRequest> requests = invocation.getArgument(0);
-        return requests.get(0).stationId();
+        return requests.getFirst().stationId();
     }
 
     private static InferenceDtos.PredictResponse normalInferenceResponse(String stationId) {
@@ -316,7 +384,9 @@ class MapPredictionServiceTest {
                 rows.add(new InferenceDtos.ProbabilityRow(
                     horizon,
                     quantity,
-                    new BigDecimal("0.80").subtract(new BigDecimal("0.05").multiply(BigDecimal.valueOf(quantity)))
+                    new BigDecimal("0.80").subtract(
+                        new BigDecimal("0.05").multiply(BigDecimal.valueOf(quantity))
+                    )
                 ));
             }
         }
@@ -333,11 +403,20 @@ class MapPredictionServiceTest {
         List<InferenceDtos.ProbabilityRow> rows = new java.util.ArrayList<>();
         for (int horizon : List.of(60, 120, 180, 240)) {
             for (int quantity = 1; quantity <= 5; quantity++) {
-                rows.add(new InferenceDtos.ProbabilityRow(horizon, quantity,
-                        new BigDecimal("0." + (60 + horizon / 60)).subtract(new BigDecimal("0.01").multiply(BigDecimal.valueOf(quantity - 1)))));
+                rows.add(new InferenceDtos.ProbabilityRow(
+                    horizon,
+                    quantity,
+                    new BigDecimal("0." + (60 + horizon / 60))
+                        .subtract(new BigDecimal("0.01").multiply(BigDecimal.valueOf(quantity - 1)))
+                ));
             }
         }
-        return new InferenceDtos.PredictResponse("NORMAL", null, "model@horizon", OffsetDateTime.parse("2026-08-15T09:05:01+09:00"),
-                List.of(new InferenceDtos.CandidatePrediction(stationId, "NORMAL", rows)));
+        return new InferenceDtos.PredictResponse(
+            "NORMAL",
+            null,
+            "model@horizon",
+            OffsetDateTime.parse("2026-08-15T09:05:01+09:00"),
+            List.of(new InferenceDtos.CandidatePrediction(stationId, "NORMAL", rows))
+        );
     }
 }
